--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,17 @@ python-dotenv
 aiohttp
 numpy
 pydantic
-beautifulsoup4
+
 html2text
 tqdm
+
+
+
+
+beautifulsoup4
 markdown
+tqdm
 python-multipart
 setuptools
+playwright
+markdownify
