--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,38 @@
-fastapi
-uvicorn
-python-dotenv
-aiohttp
-numpy
-pydantic
-
-html2text
-tqdm
-
-
-
-
-beautifulsoup4
-markdown
-tqdm
-python-multipart
-setuptools
-playwright
-markdownify
+annotated-types==0.7.0
+anyio==4.9.0
+beautifulsoup4==4.13.4
+blinker==1.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
+distro==1.9.0
+Flask==3.1.1
+flask-cors==6.0.0
+greenlet==3.2.2
+h11==0.16.0
+html2text==2025.4.15
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.10.0
+MarkupSafe==3.0.2
+openai==1.84.0
+packaging==24.2
+pinecone==7.0.2
+pinecone-plugin-assistant==1.6.1
+pinecone-plugin-interface==0.0.7
+pydantic==2.11.5
+pydantic_core==2.33.2
+pyee==13.0.0
+python-dateutil==2.9.0.post0
+requests==2.32.3
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+urllib3==2.4.0
+Werkzeug==3.1.3
