--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,13 @@
+
+beautifulsoup4
+html2text
+tqdm
+markdown
 fastapi
-uvicorn
+uvicorn[standard]
+python-multipart
 python-dotenv
 aiohttp
 numpy
 pydantic
-
-html2text
-tqdm
-
-
-
-
-beautifulsoup4
-markdown
-tqdm
-python-multipart
 setuptools
-playwright
-markdownify
